<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:screenOrientation="portrait">
    <TextView
            android:text="@string/z_label"
            android:layout_width="180dp"
            android:layout_height="30dp" android:id="@+id/stairs_raw_z_tv"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@+id/stairs_raw_y_tv" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"/>
    <TextView
            android:text="@string/y_label"
            android:layout_width="180dp"
            android:layout_height="30dp" android:id="@+id/stairs_raw_y_tv"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@+id/stairs_raw_x_tv" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"/>
    <TextView
            android:text="@string/raw"
            android:layout_width="76dp"
            android:layout_height="31dp" android:id="@+id/stairs_raw_title_tv"
            android:textSize="24sp" android:textStyle="bold|italic"
            android:textAllCaps="false"
            android:layout_marginEnd="64dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/flight_counter_tv"/>
    <TextView
            android:text="@string/raw"
            android:layout_width="76dp"
            android:layout_height="31dp" android:id="@+id/flat_raw_title_tv"
            android:textSize="24sp" android:textStyle="bold|italic"
            android:textAllCaps="false"
            android:layout_marginStart="56dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="72dp" app:layout_constraintTop_toBottomOf="@+id/flat_step_tv"/>
    <TextView
            android:text="@string/stairs"
            android:layout_width="89dp"
            android:layout_height="36dp" android:id="@+id/stairs_tv"
            android:textSize="26sp" android:textStyle="bold"
            android:textAllCaps="false" android:layout_marginTop="64dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="100dp" app:layout_constraintEnd_toEndOf="parent"
    />
    <TextView
            android:text="@string/flat_title"
            android:layout_width="85dp"
            android:layout_height="38dp" android:id="@+id/flat_tv"
            android:textSize="26sp" android:textStyle="bold"
            android:textAllCaps="false" android:layout_marginTop="64dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
    />
    <TextView
            android:text="@string/x_label"
            android:layout_width="180dp"
            android:layout_height="30dp" android:id="@+id/flat_raw_x_tv"
            android:textSize="24sp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/flat_raw_title_tv"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="@string/x_label"
            android:layout_width="180dp"
            android:layout_height="30dp" android:id="@+id/stairs_raw_x_tv"
            android:textSize="24sp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/stairs_raw_title_tv" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/initial_timer"
            android:layout_width="165dp"
            android:layout_height="41dp" android:id="@+id/timestamp_tv"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textSize="26sp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.011" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.486"
            android:textColor="@android:color/background_dark"/>
    <TextView
            android:text="@string/y_label"
            android:layout_width="180dp"
            android:layout_height="30dp" android:id="@+id/flat_raw_y_tv"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@+id/flat_raw_x_tv" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/z_label"
            android:layout_width="180dp"
            android:layout_height="30dp" android:id="@+id/flat_raw_z_tv"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@+id/flat_raw_y_tv"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
    <Button
            android:text="@string/start_flat"
            android:layout_width="105dp"
            android:layout_height="50dp" android:id="@+id/flat_start_btn"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            android:visibility="invisible" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/flat_raw_z_tv"/>
    <Button
            android:text="@string/start_trip_btn"
            android:layout_width="105dp"
            android:layout_height="50dp" android:id="@+id/endStartTrip_btn"
            app:layout_constraintStart_toEndOf="@+id/flat_start_btn" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/stairs_start_btn" android:layout_marginEnd="8dp"
            android:layout_marginTop="40dp" app:layout_constraintTop_toBottomOf="@+id/stairs_raw_z_tv"
            app:layout_constraintHorizontal_bias="0.548"/>
    <Button
            android:text="@string/report"
            android:layout_width="99dp"
            android:layout_height="40dp" android:id="@+id/report_btn"
            android:visibility="invisible"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/stairs_step_tv"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="76dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.982" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.855"/>
    <Button
            android:text="@string/start_stairs"
            android:layout_width="105dp"
            android:layout_height="50dp" android:id="@+id/stairs_start_btn"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="20dp"
            android:visibility="invisible" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/stairs_raw_z_tv"/>
    <TextView
            android:text="@string/init_steps"
            android:layout_width="93dp"
            android:layout_height="44dp" android:id="@+id/flat_step_tv"
            android:textSize="22sp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/flat_tv" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="@string/init_stairs"
            android:layout_width="93dp"
            android:layout_height="44dp" android:id="@+id/stairs_step_tv"
            android:textSize="22sp"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/stairs_tv" android:layout_marginEnd="40dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/flat_step_tv"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.674"/>
    <TextView
            android:text="@string/init_flights"
            android:layout_width="130dp"
            android:layout_height="43dp" android:id="@+id/flight_counter_tv"
            android:textSize="22sp"
            app:layout_constraintTop_toBottomOf="@+id/stairs_step_tv"
            app:layout_constraintStart_toStartOf="@+id/stairs_step_tv"/>
    <Button
            android:text="@string/slow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/slow_btn"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="56dp" app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="invisible" android:background="#C0C0C0" android:layout_marginTop="8dp"
            app:layout_constraintVertical_bias="0.138" app:layout_constraintTop_toBottomOf="@+id/walkspeed_display_tv"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/walkspeed_display_tv"/>
    <Button
            android:text="@string/normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/med_btn"
            android:layout_marginBottom="56dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="invisible"
            android:background="#0cc0d1"
            app:layout_constraintStart_toEndOf="@+id/slow_btn" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/fast_btn"
            app:layout_constraintHorizontal_bias="0.473" android:layout_marginTop="8dp"
            app:layout_constraintVertical_bias="0.138" app:layout_constraintTop_toBottomOf="@+id/walkspeed_display_tv"/>
    <Button
            android:text="@string/fast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/fast_btn"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="52dp"
            android:layout_marginBottom="56dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="invisible" android:background="#C0C0C0"
            android:layout_marginTop="8dp"
            app:layout_constraintVertical_bias="0.138" app:layout_constraintTop_toBottomOf="@+id/walkspeed_display_tv"
            app:layout_constraintStart_toEndOf="@+id/walkspeed_display_tv" android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/set_walk_speed"
            android:layout_width="164dp"
            android:layout_height="32dp" android:id="@+id/walkspeed_title_tv"
            android:textStyle="bold|italic" android:textAlignment="center"
            android:textSize="24sp"
            android:visibility="invisible"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toEndOf="@+id/flat_start_btn"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/stairs_start_btn"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/endStartTrip_btn"
            app:layout_constraintHorizontal_bias="0.464" app:layout_constraintVertical_bias="0.078"/>
    <TextView
            android:text="@string/_0_55_sec_step"
            android:layout_width="130dp"
            android:layout_height="27dp" android:id="@+id/walkspeed_display_tv"
            android:textStyle="italic"
            android:textSize="18sp"
            android:visibility="invisible"
            android:layout_marginBottom="48dp"
            app:layout_constraintBottom_toTopOf="@+id/report_btn"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/walkspeed_title_tv"
            app:layout_constraintHorizontal_bias="0.307" app:layout_constraintVertical_bias="0.029"
            app:layout_constraintEnd_toEndOf="@+id/walkspeed_title_tv"
            app:layout_constraintStart_toStartOf="@+id/walkspeed_title_tv"/>
</android.support.constraint.ConstraintLayout>