<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ReportActivity">
    <TextView
            android:text="@string/x_label"
            android:layout_width="120dp"
            android:layout_height="38dp" android:id="@+id/report_max_x_tv"
            android:textSize="20sp" android:textStyle="bold|italic"
            app:layout_constraintTop_toBottomOf="@+id/report_max_title_tv"
            android:layout_marginTop="32dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/report_avg_x_tv"
            app:layout_constraintStart_toEndOf="@+id/report_min_x_tv" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.545" android:maxLength="10"/>
    <TextView
            android:text="@string/x_label"
            android:layout_width="120dp"
            android:layout_height="38dp" android:id="@+id/report_avg_x_tv"
            android:textSize="20sp" android:textStyle="bold|italic"
            android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/report_average_title_tv"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="@+id/report_flightcounter_tv"
            android:maxLength="10"/>
    <TextView
            android:text="@string/y_label"
            android:layout_width="120dp"
            android:layout_height="38dp" android:id="@+id/report_avg_y_tv"
            android:textSize="20sp" android:textStyle="bold|italic"
            app:layout_constraintTop_toBottomOf="@+id/report_avg_x_tv" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="36dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="@+id/report_avg_x_tv" android:maxLength="10"/>
    <TextView
            android:text="@string/z_label"
            android:layout_width="120dp"
            android:layout_height="38dp" android:id="@+id/report_avg_z_tv"
            android:textSize="20sp" android:textStyle="bold|italic"
            app:layout_constraintTop_toBottomOf="@+id/report_avg_y_tv" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="36dp" app:layout_constraintStart_toStartOf="@+id/report_avg_y_tv"
            android:maxLength="10"/>
    <TextView
            android:text="@string/y_label"
            android:layout_width="120dp"
            android:layout_height="38dp" android:id="@+id/report_max_y_tv"
            android:textSize="20sp" android:textStyle="bold|italic"
            app:layout_constraintTop_toBottomOf="@+id/report_max_x_tv"
            app:layout_constraintStart_toEndOf="@+id/report_min_y_tv" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/report_avg_y_tv"
            app:layout_constraintHorizontal_bias="0.454" android:layout_marginTop="36dp" android:maxLength="10"/>
    <TextView
            android:text="@string/z_label"
            android:layout_width="120dp"
            android:layout_height="38dp" android:id="@+id/report_max_z_tv"
            android:textSize="20sp" android:textStyle="bold|italic"
            app:layout_constraintTop_toBottomOf="@+id/report_max_y_tv"
            app:layout_constraintStart_toEndOf="@+id/report_min_z_tv" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/report_avg_z_tv"
            app:layout_constraintHorizontal_bias="0.545" android:layout_marginTop="36dp" android:maxLength="10"/>
    <TextView
            android:text="@string/y_label"
            android:layout_width="120dp"
            android:layout_height="38dp" android:id="@+id/report_min_y_tv"
            android:textSize="20sp" android:textStyle="bold|italic"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/report_min_x_tv" android:layout_marginTop="36dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="@+id/report_min_x_tv"
            android:maxLength="10"/>
    <TextView
            android:text="@string/z_label"
            android:layout_width="120dp"
            android:layout_height="38dp" android:id="@+id/report_min_z_tv"
            android:textSize="20sp" android:textStyle="bold|italic"
            app:layout_constraintTop_toBottomOf="@+id/report_min_y_tv"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="36dp" app:layout_constraintEnd_toEndOf="@+id/report_min_y_tv"
            android:maxLength="10"/>
    <Button
            android:text="Done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/return_btn"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="80dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/report_max_z_tv" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.725"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.565"/>
    <TextView
            android:text="@string/min_title"
            android:layout_width="80dp"
            android:layout_height="38dp" android:id="@+id/report_min_title_tv"
            android:textSize="22sp" android:textStyle="bold|italic" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="44dp" app:layout_constraintTop_toBottomOf="@+id/report_step_tv"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="@+id/report_step_tv"
            app:layout_constraintHorizontal_bias="0.553"/>
    <TextView
            android:text="@string/x_label"
            android:layout_width="120dp"
            android:layout_height="38dp" android:id="@+id/report_min_x_tv"
            android:textSize="20sp" android:textStyle="bold|italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/report_min_title_tv" android:layout_marginStart="8dp"
            android:layout_marginTop="32dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="@+id/report_step_tv" android:maxLength="10"/>
    <TextView
            android:text="@string/max_title"
            android:layout_width="80dp"
            android:layout_height="38dp" android:id="@+id/report_max_title_tv"
            android:textSize="22sp" android:textStyle="bold|italic"
            app:layout_constraintStart_toEndOf="@+id/report_min_title_tv"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/report_average_title_tv"
            app:layout_constraintHorizontal_bias="0.408" android:layout_marginTop="44dp"
            app:layout_constraintTop_toBottomOf="@+id/report_flightcounter_tv" android:maxLength="10"/>
    <TextView
            android:text="@string/average_title"
            android:layout_width="87dp"
            android:layout_height="39dp" android:id="@+id/report_average_title_tv"
            android:textSize="22sp" android:textStyle="bold|italic"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="44dp" app:layout_constraintTop_toBottomOf="@+id/report_flightcounter_tv"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="@+id/report_flightcounter_tv"
            app:layout_constraintHorizontal_bias="0.285"/>
    <TextView
            android:text="Report"
            android:layout_width="108dp"
            android:layout_height="54dp" android:id="@+id/report_title_tv"
            android:textSize="34sp" android:textStyle="bold|italic"
            android:layout_marginTop="28dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.498"
            android:textColor="@android:color/background_dark"
    />
    <TextView
            android:text="@string/init_steps"
            android:layout_width="109dp"
            android:layout_height="31dp" android:id="@+id/report_step_tv"
            android:textSize="20sp"
            android:layout_marginTop="108dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/report_title_tv"
            app:layout_constraintHorizontal_bias="1.0"/>
    <TextView
            android:text="@string/init_flights"
            android:layout_width="109dp"
            android:layout_height="31dp" android:id="@+id/report_flightcounter_tv"
            android:textSize="20sp"
            android:visibility="visible"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/report_title_tv"
            android:layout_marginStart="8dp" android:layout_marginTop="108dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.0"/>

</android.support.constraint.ConstraintLayout>